# iris

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
core/: blink_predictor.py  blink_progress_bar.py  blink_tracker.py  camera.py  camera_selector.py  main_window.py  matrix_util.py  rng_recovery.py  util.py
